repaired too long title/description and modified entry page

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,8 +14,22 @@
 //@import '~bootstrap/scss/bootstrap';
 
 :root {
-    --main-accent-color: #FF6600;
+    --main-accent-color: #ff6600;
     font-family: 'Nunito', 'sans-serif';
+}
+.gradient {
+    background: #ff6600;
+    background: -moz-linear-gradient(left, #ff6600 0%, #b70046 100%);
+    background: -webkit-linear-gradient(left, #ff6600 0%,#b70046 100%);
+    background: linear-gradient(to right, #ff6600 0%,#b70046 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff6600', endColorstr='#b70046',GradientType=1 );
+}
+.border-gradient {
+    border-color: #ff6600;
+    border-color: -moz-linear-gradient(left, #ff6600 0%, #b70046 100%);
+    border-color: -webkit-linear-gradient(left, #ff6600 0%,#b70046 100%);
+    border-color: linear-gradient(to right, #ff6600 0%,#b70046 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff6600', endColorstr='#b70046',GradientType=1 );
 }
 
 .theme-light {
@@ -40,13 +54,13 @@
 .button {
     @apply .text-white .bg-accent .text-base .px-5 .py-2 .rounded-lg .shadow ;
     &:hover {
-        @apply .bg-orange-700 .text-white ;
+        @apply .gradient .text-white ;
     }
 }
 .btn-gray {
     @apply .text-default .border-2 .border-accent .bg-transparent ;
     &:hover {
-        @apply .bg-orange-700 .border-orange-700 .text-white ;
+        @apply .gradient .border-gradient .text-white ;
     }
 }
 .card { @apply .bg-card .p-5 .rounded-lg .shadow ; }
